Added models / Added mongoose / Updated api.doc

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -282,6 +282,11 @@ section {
   font-family: "Overpass Mono", monospace;
 }
 
+.required {
+  color: red;
+  font-weight: normal;
+}
+
 .active {
   display: block;
 }
